--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stitches/react": "^1.2.8",
     "color2k": "^2.0.0",
     "compress-json": "^2.0.1",
+    "core-js-pure": "^3.23.3",
     "dagre": "^0.8.5",
     "expr-eval": "^2.0.2",
     "fs": "^0.0.1-security",
@@ -41,6 +42,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.6",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "prisma": "^4.0.0",
     "typescript": "4.5.2"
   }
