--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@prisma/client": "^4.0.0",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-checkbox": "^0.1.5",
+    "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-switch": "^0.1.5",
     "@reduxjs/toolkit": "^1.8.2",
     "@rematch/core": "^2.2.0",
