--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-switch": "^0.1.5",
     "@reduxjs/toolkit": "^1.8.2",
     "@rematch/core": "^2.2.0",
