--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dagre": "^0.8.5",
     "expr-eval": "^2.0.2",
     "fs": "^0.0.1-security",
+    "just-compact": "^3.0.1",
     "next": "12.0.6",
     "nextjs-cors": "^2.1.1",
     "postcss-calc-ast-parser": "^0.1.4",
