--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js-pure": "^3.23.3",
     "dagre": "^0.8.5",
     "expr-eval": "^2.0.2",
+    "framer-motion": "^6.5.1",
     "fs": "^0.0.1-security",
     "just-compact": "^3.0.1",
     "next": "12.0.6",
